# pydantic_settings_yaml_demo

./: .gitignore  README.md  env.dev.yaml  env.local.yaml  env.yaml  pyproject.toml
src/: app.py
src/settings/: __init__.py  settings.py
tests/unit/settings/: test_settings_advanced.py  test_settings_parameterized.py
